<resources>
    <string name="app_name">EzChats</string>
    <string name="start_messaging">Start Messaging</string>
    <string name="todo">TODO</string>
    <string name="connect_easily_with_your_family_and_friends_over_countries">Connect easily with your family and friends over countries</string>
    <string name="get_otp">Get OTP</string>
    <string name="todo1">TODO</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number">Enter your phone Number</string>
    <string name="enter_otp">Enter otp</string>
    <string name="enter_one_time_pin">Enter One time Pin</string>
    <string name="please_enter_otp_we_sent_you_via_sms">please enter otp we sent you via sms</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>