<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F1828"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="348dp"
        android:layout_height="124dp"
        android:layout_marginTop="452dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/connect_easily_with_your_family_and_friends_over_countries"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="326dp"
        android:layout_height="312dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247"
        app:srcCompat="@drawable/img_1" />

    <Button
        android:id="@+id/button"
        android:layout_width="327dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:height="52dp"
        android:backgroundTint="#375FFF"
        android:backgroundTintMode="src_in"
        android:fontFamily="@font/inter_bold"
        android:text="@string/start_messaging"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>