<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F1828"
    tools:context=".signup">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="252dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_light"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="please enter a valid 10 digit phone number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="327dp"
        android:layout_height="52dp"
        android:height="52dp"
        android:backgroundTint="#375FFF"
        android:backgroundTintMode="src_in"
        android:fontFamily="@font/inter_bold"
        android:text="@string/get_otp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Animation.Design.BottomSheetDialog"
        android:layout_width="353dp"
        android:layout_height="60dp"
        android:hint="@string/phone_number"
        app:boxStrokeColor="#375FFF"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextColor="#375FFF"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="ExtraText">>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLength="10"
            android:textColorHint="#0288D1">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/enter_your_phone_number"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>